landing preview: separate toggleAll button into expand and collapse (Bug 1509515).
Summary:
Further to the last fix for Bug 1500223, which removed the max-height
limit and overflow properties; this fix improves the UI with the
addition of buttons to toggle the expansion and contraction of
individual, or all, long commit messages.

Below each commit message, the number of lines that are hidden is
displayed. A separate expandAllButton and collapseAllButton for all
commit messages provides a neat solution in which the user can display
or hide all long messages. Alternatively, each long message has its
own expand/collapse button with which the user can toggle individually
as they please.

Depends on D14996.

Test Plan: Manually tested in browser.

Reviewers: smacleod

Reviewed By: smacleod

Bug #: 1509515

Differential Revision: https://phabricator.services.mozilla.com/D15000

--- a/landoui/assets_src/css/pages/StackPage.scss
+++ b/landoui/assets_src/css/pages/StackPage.scss
@@ -193,6 +193,19 @@ ul.StackPage-blockers {
     }
   }
 
+  &-sectionHeader {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    margin-bottom: 1ch;
+  }
+
+  &-commitDetails {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+
   &-section {
     margin-left: 1ch;
   }
@@ -214,6 +227,18 @@ ul.StackPage-blockers {
     top: -13px;
   }
 
+  &-expandAll {
+    display: inline-block;
+  }
+
+  &-collapseAll {
+    display: inline-block;
+  }
+
+  &-expand {
+    display: inline-block;
+  }
+
   &-commitMessage {
     font-family: 'Fira Mono', monospace;
     font-size: 1em;
@@ -227,6 +252,12 @@ ul.StackPage-blockers {
     background-color: inherit;
     border: 1px dashed black;
     padding: 0.5ch;
+    max-height: 1.25em * 5.5;
+    overflow-y: hidden;
+  }
+
+  &-seeMore {
+    display: block;
   }
 
   &-warningsList {
